data/test/regression/type_check/fail/array_7.v
// Identical number of subscripts, but range where scalar is expected
wire x[3:0];
assign x[2:0] = 1;
